force-app/main/default/objects/SVMXC__Site__c/SVMXC__Site__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Site is a unique location and is identified by a name and address. Site information is especially beneficial in service scenarios when accurate information about the physical location of a product is crucial to the timely delivery of service. ServiceMax also uses site to track warehouse and field inventory locations.</description>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>