force-app/main/default/objects/SVMXC__Site__c/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <description>Field to Copy the Care Of value from Account</description>
    <formula>IF(NOT(ISBLANK(SVMXC__Account__r.Care_Of__c)), SVMXC__Account__r.Care_Of__c, Care_Of_From_SAP__c)</formula>
    <label>Care Of</label>
    <type>Text</type>
</CustomField>