force-app/main/default/objects/SVMXC__Site__c/fields/ERP_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_ID__c</fullName>
     <description>Unique ERP Customer ID populated based on Account linked to location.</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ERP Customer ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>