force-app/main/default/objects/SVMXC__Site__c/fields/Full_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Location_Name__c</fullName>
    <description>Text field to store Full Location Name.</description>
    <label>Full Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>