force-app/main/default/objects/SVMXC__Site__c/fields/Is_Illumina_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Illumina_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Location record is Illumina Address. 
Manually Populated if the Location record is Illumina Address.</description>
    <label>Is Illumina Address</label>
    <type>Checkbox</type>
</CustomField>