force-app/main/default/objects/SVMXC__Site__c/fields/Is_Logged_In_User_Stock_Authority__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_In_User_Stock_Authority__c</fullName>
    <description>To check whether the logged in user is stock authority.</description>
    <formula>($User.FirstName &amp;&apos; &apos;&amp; $User.LastName) = Inventory_Authority__c</formula>
    <label>Is Logged In User Stock Authority</label>
    <type>Checkbox</type>
</CustomField>