force-app/main/default/objects/SVMXC__Site__c/fields/Is_Primary_Illumina_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Illumina_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked to indicate the primary Illumina address if there are multiple defined for the same country 
Manually Populated if the Location record is primary Illumina Address.</description>
    <label>Is Primary Illumina Address</label>
    <type>Checkbox</type>
</CustomField>