force-app/main/default/objects/SVMXC__Site__c/fields/Shipping_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location_Address__c</fullName>
        <description>Field to store concatenate Shipping Location address so that it can be used for formfill on SFM screen to autofill the complete address of shipping location</description>
        <formula>IF(NOT(ISBLANK(Care_Of__c)),Care_Of__c +&quot;, &quot;+
          IF(RIGHT((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c))), 1) == &apos;,&apos;
          ,LEFT((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c))), 
            LEN((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c)))) - 1)
          ,(IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c)))), 
          IF(RIGHT((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c))), 1) == &apos;,&apos;
          ,LEFT((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c))), 
            LEN((IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c)))) - 1)
          ,(IF(ISBLANK(SVMXC__Street__c),NULL,SVMXC__Street__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(Street_2__c),NULL,Street_2__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__City__c),NULL,SVMXC__City__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(SVMXC__State__c),NULL,SVMXC__State__c &amp; &quot;, &quot;) &amp;
            IF(ISBLANK(SVMXC__Zip__c),NULL,SVMXC__Zip__c &amp; &quot;, &quot;) &amp; IF(ISBLANK(TEXT(SVMXC__Country__c)),NULL,TEXT(SVMXC__Country__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Location Address</label>
        <type>Text</type>
</CustomField>