force-app/main/default/objects/SVMXC__Site__c/fields/Street_Local__c.field-meta.xml
<CustomField>
    <fullName>Street_Local__c</fullName>
    <description>To capture the street local name</description>
    <label>Street (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>