force-app/main/default/objects/SVMXC__Site__c/fields/SVMX_PS_Active__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>