force-app/main/default/objects/SVMXC__Site__c/fields/SVMX_PS_Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Preferred_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>