force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which this site belongs to. Note that you can maintain your own organization’s locations in which case you will create an Account record for your account.</description>
    <inlineHelpText>The company to which this site belongs to. Note that you can maintain your own organization’s locations in which case you will create an Account record for your company</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>