force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__Email__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Email__c</fullName>
    <description>Location Email</description>
    <inlineHelpText>Location Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>