force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__IsPartner__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsPartner__c</fullName>
    <description>Flag indicates if location is Partner Location or not.</description>
    <formula>IF( SVMXC__IsPartnerRecord__c ,&quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag indicates if location is Partner Location or not.</inlineHelpText>
    <label>Is Partner</label>
    <type>Text</type>
</CustomField>