force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__IsPartnerRecord__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsPartnerRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates that Location belongs to a Partner.</description>
    <inlineHelpText>Flag indicates that Location belongs to a Partner.</inlineHelpText>
    <label>Is Partner Record</label>
    <type>Checkbox</type>
</CustomField>