force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__Parent__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>