force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__SM_External_Parent__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_External_Parent__c</fullName>
    <description>External system unique ID to the parent location.</description>
    <inlineHelpText>External system unique ID to the parent location.</inlineHelpText>
    <label>Parent (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>