force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__Stocking_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Stocking_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if this is a stocking location or not. ServiceMax does not perform inventory updates on non-stocking locations.</description>
    <inlineHelpText>Flag indicates if this is a stocking location or not. ServiceMax does not perform inventory updates on non-stocking locations.</inlineHelpText>
    <label>Stocking Location</label>
    <type>Checkbox</type>
</CustomField>