force-app/main/default/objects/SVMXC__Site__c/fields/SVMXC__Zip__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Zip__c</fullName>
    <description>“Zip/Postal code” part of the site’s address</description>
    <inlineHelpText>“Zip/Postal code” part of the site’s address</inlineHelpText>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>