force-app/main/default/objects/SVMXC__Site__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>To capture the type of location</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trunk</fullName>
            </value>
            <value>
                <fullName>Locker</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Sold To</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Ultimate Consignee</fullName>
            </value>
            <value>
                <fullName>Partner Stock</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Importer Of Record</fullName>
            </value>
            <value>
                <fullName>Customer Hierarchy</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
                <isActive>false</isActive>
                <label>Temporary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>