force-app/main/default/objects/SVMXC__Site__c/recordTypes/SVMXC__Depot.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Depot</fullName>
    <active>false</active>
    <description>Depot</description>
    <label>Depot</label>
</RecordType>