force-app/main/default/objects/SVMXC__Site__c/recordTypes/SVMXC__Inventory_Location.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Inventory_Location</fullName>
    <active>false</active>
    <description>Depot Child</description>
    <label>Depot Child</label>
</RecordType>