force-app/main/default/objects/SVMXC__Site__c/recordTypes/SVMXC__Inventory_Org.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Inventory_Org</fullName>
    <active>false</active>
    <description>Depot Parent</description>
    <label>Depot Parent</label>
</RecordType>