force-app/main/default/objects/SVMXC__Site__c/recordTypes/SVMXC__Standard_Location.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Standard_Location</fullName>
    <active>true</active>
    <description>Standard Location</description>
    <label>Standard Location</label>
</RecordType>