force-app/main/default/objects/SVMXC__Site__c/validationRules/CheckEditLocationRecordERPCustomerId.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditLocationRecordERPCustomerId</fullName>
    <active>true</active>
    <description>If the &apos;ERP Customer ID&apos; field is populated, then the Location record will not be editable by any user except System Admin and Integration user.</description>
    <errorConditionFormula>NOT( 
OR( 
AND( 
ISBLANK(PRIORVALUE(ERP_Customer_ID__c)), 
ISCHANGED(ERP_Customer_ID__c) 
), 
OR 
($Profile.Name=$Label.ProfileSystemAdmin, 
$Profile.Name=$Label.Profile_SNAP_Integration, 
$Profile.Name=$Label.Integration_SAP_Service, 
$Profile.Name=$Label.Integration_Sales_SNAP_Profile,
$Permission.SS_Service_Ops_Edit_Custom_Perm,
$Permission.SS_Edit_Tool_Replenishment_Cost_Center,
$Profile.Name=$Label.Integration_Service_SNAP_Profile,
$User.FirstName ==$Label.Automated_Process_User 
), 
ISBLANK(ERP_Customer_ID__c) 
) 
)</errorConditionFormula>
    <errorMessage>Location record cannot be edited by any user except System Admin and Integration user, If the &apos;ERP Customer ID&apos; field is populated.</errorMessage>
</ValidationRule>