force-app/main/default/objects/SVMXC__Site__c/listViews/Partner_Stock_Locations.listView-meta.xml
<ListView>
    <fullName>Partner_Stock_Locations</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Street__c</columns>
    <columns>SVMXC__City__c</columns>
    <columns>SVMXC__State__c</columns>
    <columns>SVMXC__Zip__c</columns>
    <columns>SVMXC__Country__c</columns>
    <columns>SVMXC__Latitude__c</columns>
    <columns>SVMXC__Longitude__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Partner Stock</value>
    </filters>
    <label>Partner Stock Locations</label>
</ListView>