force-app/main/default/objects/SVMXC__Site__c/listViews/SVMX_PS_Stocking_Locations_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>SVMX_PS_Stocking_Locations_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>SVMX_PS_Approved_Stocking_Location__c</columns>
    <columns>SVMXC__Stocking_Location__c</columns>
    <columns>SVMXC__Service_Engineer__c</columns>
    <columns>SVMXC__Street__c</columns>
    <columns>SVMXC__City__c</columns>
    <columns>SVMXC__State__c</columns>
    <columns>SVMXC__Zip__c</columns>
    <columns>SVMXC__Country__c</columns>
    <columns>SVMXC__Latitude__c</columns>
    <columns>SVMXC__Longitude__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SVMXC__Stocking_Location__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SVMX_PS_Approved_Stocking_Location__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Stocking Locations Awaiting Approval</label>
    <language>en_US</language>
</ListView>