force-app/main/default/objects/SVMXC__Site__c/listViews/SVMXC__All_Locations.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Locations</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Street__c</columns>
    <columns>SVMXC__City__c</columns>
    <columns>SVMXC__State__c</columns>
    <columns>SVMXC__Zip__c</columns>
    <columns>SVMXC__Country__c</columns>
    <columns>SVMXC__Latitude__c</columns>
    <columns>SVMXC__Longitude__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Location</label>
    <language>en_US</language>
</ListView>